Add HTML Tags that didn´t push on last commit
Add on html file Doctype, hmtl, head and body tags

--- a/index.html
+++ b/index.html
@@ -1,20 +1,24 @@
-<img src="https://cdn-images-1.medium.com/max/1200/1*60u1QENWMOJXaLQ1xzn0TQ.png" alt="odin project logo">
-<h1>Odin Recipes</h1>
-<ul>
-    <li><a href="recipes/carne_a_valenciana.html">Carne de Porco à Alentejana</a></li>
-    <li><a href="recipes/francesinha.html">Francesinha</a></li>
-    <li><a href="recipes/lasagna.html">Lasagna</a></li>
-    <li><a href="recipes/pasta_bolonhesa.html">Pasta Bolognese</a></li>
-    <li><a href="recipes/pasta_carbornara.html">Pasta Carbonara</a></li>
-    <li><a href="recipes/rojoes_a_moda_do_minho.html">Rojões à moda do Minho</a></li>
-</ul>
-
-
-<!-- <img src="https://i.pinimg.com/originals/9c/35/78/9c3578ff3953134881440d55666c9e47.jpg" alt=""> -->
-
-
-
-
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./styles/style.css">
+    <title>Odin Recipes</title>
+  </head>
+  <body> 
+    <h1><img class="img-logo" src="https://cdn-images-1.medium.com/max/1200/1*60u1QENWMOJXaLQ1xzn0TQ.png" alt="odin project logo">Odin Recipes</h1>
+    <ul>
+      <li><a href="recipes/carne_a_valenciana.html">Carne de Porco à Alentejana</a></li>
+      <li><a href="recipes/francesinha.html">Francesinha</a></li>
+      <li><a href="recipes/lasagna.html">Lasagna</a></li>
+      <li><a href="recipes/pasta_bolonhesa.html">Pasta Bolognese</a></li>
+      <li><a href="recipes/pasta_carbornara.html">Pasta Carbonara</a></li>
+      <li><a href="recipes/rojoes_a_moda_do_minho.html">Rojões à moda do Minho</a></li>
+    </ul>
+    <!-- <img src="https://i.pinimg.com/originals/9c/35/78/9c3578ff3953134881440d55666c9e47.jpg" alt=""> -->
+  </body>
+</html>
 
 
 
