--- a/recipes/carne_a_valenciana.html
+++ b/recipes/carne_a_valenciana.html
@@ -1,47 +1,59 @@
-<h1><a href="../index.html">Odin Recipes</a></h1>
-<h2>Carne de Porco à Alentejana</h2>
-<img src="https://i.pinimg.com/564x/83/a5/99/83a59995a7ea7d98ec7f6a97852b76c9.jpg" alt="A greyish-blue dish with diced pork, accompanied by diced fried potatoes and boiled clams, 
-with a light sauce at the bottom of the dish and a light sprinkling of parsley on top.">
-<h3>Description</h3>
-<p>Few dishes sum up the flavours of the south of Portugal quite as well as 
-    Carne de Porco à Alentejana.
-    You’ll find the dish listed on menus across the Algarve and Alentejo and obscured 
-    from its name is the wonderful addition of local clams. 
-    Intriguing and unusual for lots of cuisines, this is a dish that combines seafood and pork perfectly. Despite its name, it’s believed to have been invented somewhere in the Algarve. The Alentejana refers to some of the best pork available in Portugal, which would have originally been included in the dish. Although, just about any pork is fine, there’s no need to hunt for the famed Alentejo Pork if you’re not nearby. What else is in the dish? It’s the typical Southern Portuguese marinade of white wine, garlic, paprika, and bay leaf. If it’s familiar to you, that’s because it’s used in a surprising number of dishes,
-     most famously the southern variant of the Bifana.</p>
-<h3>Ingredients <span>(serves 2 people)</span></h3>
-<ul>
-    <li>500g pork loin (with some fat but not much)</li>
-    <li>2 garlic cloves – crushed</li>
-    <li>2tsp massa de pimentão (Pepper paste, widely available in Portuguese supermarkets)</li>
-    <li>2 bay leaves</li>
-    <li>1/2tsp smoked paprika</li>
-    <li>400ml of a good white wine</li>
-    <li>Salt and black pepper to taste</li>
-    <li>2 large potatoes</li>
-    <li>1tbsp olive oil</li>
-    <li>500g clams</li>
-    <li>Fresh cilantro</li>
-</ul>
-<h3>Steps</h3>
-<ol>
-    <li>Cut the pork into approximately 3cm cubes and place in a bowl or deep dish.</li>
-    <li>Add the wine, crushed garlic cloves, bay leaves, pepper paste and paprika to the dish.</li>
-    <li>Mix thoroughly and be sure the pork is covered well.</li>
-    <li>Cover, and leave to marinade for at least 2 hours.</li>
-    <li>While the pork is marinating, we can prepare our clams. Place them in a large bowl and cover them with cold salted water. You’ll want to leave them for at least an hour. The clams which should be alive will start to breathe and begin to filter the water. This should push the older saltwater and sand out of their shells. You’ll notice the water get pretty murky.</li>
-    <li>With the pork marinated, separate the pork and keep the marinade. Sear the pork in a hot pan.</li>
-    <li>Once all of the pork is seared, pour the remaining marinade on top of the pork. Let it simmer with a lid for around 45 minutes.</li>
-    <li>Meanwhile, peel and cut the potatoes into small cubes.</li>
-    <li>Give them a nice coating of olive oil and salt and spread them on a baking tray. Place them in the oven at 200°. Cook them in the oven for around 30-40 minutes until they’re golden brown.</li>
-    <li>Drain the clams into a large colander or sieve, remove any with broken shells, or any clams that don’t close when you touch them.</li>
-    <li>If you’ve timed this correctly, we should be reaching the point where everything is nearly ready, the clams will only need around 5 minutes so pause here if your potatoes aren’t quite done.</li>
-    <li>Place all of the clams into the pan with the pork. Use a lid and let the clams, steam/simmer in the liquid. They’ll take around 5 to 7 minutes to cook and open.</li>
-    <li>While the clams are cooking, spread your potatoes evenly on a plate.</li>
-    <li>Once the clams are cooked, discard any that did not open. We think its best to remove about half of the clams from their shells and leave them in the sauce.</li>
-    <li>Spoon the pork, clams and plenty of the sauce on top of the potato base layer! Sprinkle with fresh coriander.</li>
-    <li>Serve and enjoy!</li>
-</ol>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../styles/style.css">
+    <title>Odin Recipes</title>
+  </head>
+  <body>
+    <h1><a href="../index.html">Odin Recipes</a></h1>
+    <h2>Carne de Porco à Alentejana</h2>
+    <img class="img-recipe" src="https://i.pinimg.com/564x/83/a5/99/83a59995a7ea7d98ec7f6a97852b76c9.jpg" alt="A greyish-blue dish with diced pork, accompanied by diced fried potatoes and boiled clams, 
+    with a light sauce at the bottom of the dish and a light sprinkling of parsley on top.">
+    <h3>Description</h3>
+    <p>Few dishes sum up the flavours of the south of Portugal quite as well as 
+        Carne de Porco à Alentejana.
+        You’ll find the dish listed on menus across the Algarve and Alentejo and obscured 
+        from its name is the wonderful addition of local clams. 
+        Intriguing and unusual for lots of cuisines, this is a dish that combines seafood and pork perfectly. Despite its name, it’s believed to have been invented somewhere in the Algarve. The Alentejana refers to some of the best pork available in Portugal, which would have originally been included in the dish. Although, just about any pork is fine, there’s no need to hunt for the famed Alentejo Pork if you’re not nearby. What else is in the dish? It’s the typical Southern Portuguese marinade of white wine, garlic, paprika, and bay leaf. If it’s familiar to you, that’s because it’s used in a surprising number of dishes,
+        most famously the southern variant of the Bifana.</p>
+    <h3>Ingredients <span>(serves 2 people)</span></h3>
+    <ul>
+        <li>500g pork loin (with some fat but not much)</li>
+        <li>2 garlic cloves – crushed</li>
+        <li>2tsp massa de pimentão (Pepper paste, widely available in Portuguese supermarkets)</li>
+        <li>2 bay leaves</li>
+        <li>1/2tsp smoked paprika</li>
+        <li>400ml of a good white wine</li>
+        <li>Salt and black pepper to taste</li>
+        <li>2 large potatoes</li>
+        <li>1tbsp olive oil</li>
+        <li>500g clams</li>
+        <li>Fresh cilantro</li>
+    </ul>
+    <h3>Steps</h3>
+    <ol>
+        <li>Cut the pork into approximately 3cm cubes and place in a bowl or deep dish.</li>
+        <li>Add the wine, crushed garlic cloves, bay leaves, pepper paste and paprika to the dish.</li>
+        <li>Mix thoroughly and be sure the pork is covered well.</li>
+        <li>Cover, and leave to marinade for at least 2 hours.</li>
+        <li>While the pork is marinating, we can prepare our clams. Place them in a large bowl and cover them with cold salted water. You’ll want to leave them for at least an hour. The clams which should be alive will start to breathe and begin to filter the water. This should push the older saltwater and sand out of their shells. You’ll notice the water get pretty murky.</li>
+        <li>With the pork marinated, separate the pork and keep the marinade. Sear the pork in a hot pan.</li>
+        <li>Once all of the pork is seared, pour the remaining marinade on top of the pork. Let it simmer with a lid for around 45 minutes.</li>
+        <li>Meanwhile, peel and cut the potatoes into small cubes.</li>
+        <li>Give them a nice coating of olive oil and salt and spread them on a baking tray. Place them in the oven at 200°. Cook them in the oven for around 30-40 minutes until they’re golden brown.</li>
+        <li>Drain the clams into a large colander or sieve, remove any with broken shells, or any clams that don’t close when you touch them.</li>
+        <li>If you’ve timed this correctly, we should be reaching the point where everything is nearly ready, the clams will only need around 5 minutes so pause here if your potatoes aren’t quite done.</li>
+        <li>Place all of the clams into the pan with the pork. Use a lid and let the clams, steam/simmer in the liquid. They’ll take around 5 to 7 minutes to cook and open.</li>
+        <li>While the clams are cooking, spread your potatoes evenly on a plate.</li>
+        <li>Once the clams are cooked, discard any that did not open. We think its best to remove about half of the clams from their shells and leave them in the sauce.</li>
+        <li>Spoon the pork, clams and plenty of the sauce on top of the potato base layer! Sprinkle with fresh coriander.</li>
+        <li>Serve and enjoy!</li>
+    </ol>
+  </body>
+  </html>
+
 
 
 
