--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -1,54 +1,66 @@
-<h1><a href="../index.html">Odin Recipes</a></h1>
-<h2>Lasagna</h2>
-<img src="https://i.pinimg.com/564x/db/58/cc/db58ccfbcf9d0a2968dcd9bccc9074d0.jpg" alt="White plate with a delicious piece of lasagna, a basil leaf on top and two cherry tomatoes on the bottom">
-<h3>Description</h3>
-<p>Lasagne is a type of pasta, possibly one of the oldest types, made in very wide, 
-    flat sheets. 
-    The same-named Italian dish is made of stacked layers of lasagna alternating 
-    with fillings such as ragù (ground meats and tomato sauce), béchamel sauce, 
-    vegetables, cheeses (which may include ricotta, mozzarella, and Parmesan), 
-    and seasonings and spices.</p>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../styles/style.css">
+    <title>Odin Recipes</title>
+  </head>
+  <body>
+    <h1><a href="../index.html">Odin Recipes</a></h1>
+    <h2>Lasagna</h2>
+    <img class="img-recipe" src="https://i.pinimg.com/564x/db/58/cc/db58ccfbcf9d0a2968dcd9bccc9074d0.jpg" alt="White plate with a delicious piece of lasagna, a basil leaf on top and two cherry tomatoes on the bottom">
+    <h3>Description</h3>
+    <p>Lasagne is a type of pasta, possibly one of the oldest types, made in very wide, 
+        flat sheets. 
+        The same-named Italian dish is made of stacked layers of lasagna alternating 
+        with fillings such as ragù (ground meats and tomato sauce), béchamel sauce, 
+        vegetables, cheeses (which may include ricotta, mozzarella, and Parmesan), 
+        and seasonings and spices.</p>
 
-<h3>Ingredients</h3>
-<ul>
-    <li>1 packet lasagne</li>
-    <li>3 yellow onions</li>
-    <li>2 garlic cloves</li>
-    <li>1 stalk celery</li>
-    <li>1 carrot</li>
-    <li>600g ground beef</li>
-    <li>800g tomato purée</li>
-    <li>15cl water</li>
-    <li>20 cl red wine</li>
-    <li>2 bay leaves</li>
-    <li>thyme</li>
-    <li>basil</li>
-    <li>3 pinches grated nutmeg</li>
-    <li>70g grated cheese</li>
-    <li>125g Parmesan cheese</li>
-    <li>salt</li>
-    <li>pepper</li>
-    <li>100g flour</li>
-    <li>125g butter</li>
-    <li>1l milk</li>
-</ul>
-<h3>Steps</h3>
-<ol>
-    <li>Sauté chopped garlic cloves and minced onions in a little olive oil.</li>
-    <li>Add the chopped carrot and celery stalk, then the meat and sauté.</li>
-    <li>After a few minutes, add the red wine. Cook until evaporated.</li>
-    <li>Add tomato purée, water and herbs. Season with salt and pepper, then simmer over low heat for 45 minutes.</li>
-    <li>Prepare the béchamel sauce: melt 100 g butter.</li>
-    <li>Remove from heat and add flour all at once.</li>
-    <li>Return to the heat and stir with a whisk until smooth.</li>
-    <li>Gradually add the milk.</li>
-    <li>Stir constantly, until the mixture thickens.</li>
-    <li>Season with nutmeg, salt and pepper. Cook, stirring, over very low heat for about 5 minutes. Set aside.</li>
-    <li>Preheat oven to 200°C (gas mark 6-7). Oil the lasagne dish. Top with a thin layer of béchamel sauce, then lasagne sheets, bolognese, béchamel sauce and Parmesan. Repeat 3 times in succession.</li>
-    <li>On the last layer of lasagne, place only the béchamel sauce and cover with grated cheese. Sprinkle with a few knobs of butter.</li>
-    <li>Bake in the oven for approximately 25 minutes.</li>
-    <li>Serve</li>
-</ol>
+    <h3>Ingredients</h3>
+    <ul>
+        <li>1 packet lasagne</li>
+        <li>3 yellow onions</li>
+        <li>2 garlic cloves</li>
+        <li>1 stalk celery</li>
+        <li>1 carrot</li>
+        <li>600g ground beef</li>
+        <li>800g tomato purée</li>
+        <li>15cl water</li>
+        <li>20 cl red wine</li>
+        <li>2 bay leaves</li>
+        <li>thyme</li>
+        <li>basil</li>
+        <li>3 pinches grated nutmeg</li>
+        <li>70g grated cheese</li>
+        <li>125g Parmesan cheese</li>
+        <li>salt</li>
+        <li>pepper</li>
+        <li>100g flour</li>
+        <li>125g butter</li>
+        <li>1l milk</li>
+    </ul>
+    <h3>Steps</h3>
+    <ol>
+        <li>Sauté chopped garlic cloves and minced onions in a little olive oil.</li>
+        <li>Add the chopped carrot and celery stalk, then the meat and sauté.</li>
+        <li>After a few minutes, add the red wine. Cook until evaporated.</li>
+        <li>Add tomato purée, water and herbs. Season with salt and pepper, then simmer over low heat for 45 minutes.</li>
+        <li>Prepare the béchamel sauce: melt 100 g butter.</li>
+        <li>Remove from heat and add flour all at once.</li>
+        <li>Return to the heat and stir with a whisk until smooth.</li>
+        <li>Gradually add the milk.</li>
+        <li>Stir constantly, until the mixture thickens.</li>
+        <li>Season with nutmeg, salt and pepper. Cook, stirring, over very low heat for about 5 minutes. Set aside.</li>
+        <li>Preheat oven to 200°C (gas mark 6-7). Oil the lasagne dish. Top with a thin layer of béchamel sauce, then lasagne sheets, bolognese, béchamel sauce and Parmesan. Repeat 3 times in succession.</li>
+        <li>On the last layer of lasagne, place only the béchamel sauce and cover with grated cheese. Sprinkle with a few knobs of butter.</li>
+        <li>Bake in the oven for approximately 25 minutes.</li>
+        <li>Serve</li>
+    </ol>
+  </body>
+  </html>
+
 
 
 
