Add main tag and missing logo on html files. Edit style on CSS.

--- a/recipes/belouras.html
+++ b/recipes/belouras.html
@@ -2,54 +2,56 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../styles/style.css">
     <title>Odin Recipes</title>
   </head>
   <body>
-    <h1><a href="../index.html">Odin Recipes</a></h1>
-    <h2>Belouras</h2>
-    <img class="img-recipe" src="https://i.pinimg.com/564x/c7/26/51/c7265119c813d9b54d556bef22d8763a.jpg"
-    alt="Breadboard with a knife and 3 Belouras on top, one of which is already sliced. Belouras looks like a loaf of bread.">
-    <h3>Description</h3>
-    <p>Beloura, bolacho, farinhato, pilouco ou bica are the different names given to this delicacy from traditional 
-        Portuguese cuisine, more specifically from the Minho region in northern 
-        Portugal.</p>
-    <p>Belouras are made from wheat, maize and rye flour, 
-        mixed with pig's blood and seasoned with strong spices. 
-        They should always be cut into thin slices, fried and served immediately, 
-        piping hot.</p>
-    <p>Traditionally, belouras are part of the recipe for 
-        <a href="./rojoes_a_moda_do_minho.html">Rojões à moda do Minho</a>,
-        but they are an excellent accompaniment to other dishes or appetisers.</p>
-    <h3>Ingredients</h3>
-    <ul>
-        <li>1 clove of garlic</li>
-        <li>1 orange leaf</li>
-        <li>1 bay leaf</li>
-        <li>1 sprig of parsley</li>
-        <li>10g baker's yeast</li>
-        <li>125g rye flour</li>
-        <li>125g wheat flour</li>
-        <li>250g cornflour</li>
-        <li>70g liquid pig's blood</li>
-        <li>meat cooking water</li>
-        <li>pingue (fat from cooking the rojões)</li>
-        <li>salt, pepper and cumin as needed</li>
-    </ul>
-    <h3>Steps</h3>
-    <ol>
-        <li>Mix the flours and sieve.</li>
-        <li>Knead them with the baker's yeast, chilli, cumin, blood and enough meat cooking water to make a stiff dough.</li>
-        <li>Leave to rise in a warm place until it cracks.</li>
-        <li>Shape the dough into a cylindrical form with wet hands.</li>
-        <li>Cook the belouras in boiling water, seasoned with salt, parsley, garlic, orange leaves and bay leaves. As soon as they come to the surface, they are cooked.</li>
-        <li>Remove the belouras and place them on a baking tray, muffled between two cloths.</li>
-        <li>When it's time to serve, cut them into thin slices and fry in the dripping.</li>
-    </ol>
-
+    <main>
+      <h1><img class="img-logo" src="https://cdn-images-1.medium.com/max/1200/1*60u1QENWMOJXaLQ1xzn0TQ.png" alt="odin project logo"><a href="../index.html">Odin Recipes</a></h1>
+      <h2>Belouras</h2>
+      <img class="img-recipe" src="https://i.pinimg.com/564x/c7/26/51/c7265119c813d9b54d556bef22d8763a.jpg"
+      alt="Breadboard with a knife and 3 Belouras on top, one of which is already sliced. Belouras looks like a loaf of bread.">
+      <h3>Description</h3>
+      <p>Beloura, bolacho, farinhato, pilouco ou bica are the different names given to this delicacy from traditional 
+          Portuguese cuisine, more specifically from the Minho region in northern 
+          Portugal.</p>
+      <p>Belouras are made from wheat, maize and rye flour, 
+          mixed with pig's blood and seasoned with strong spices. 
+          They should always be cut into thin slices, fried and served immediately, 
+          piping hot.</p>
+      <p>Traditionally, belouras are part of the recipe for 
+          <a href="./rojoes_a_moda_do_minho.html">Rojões à moda do Minho</a>,
+          but they are an excellent accompaniment to other dishes or appetisers.</p>
+      <h3>Ingredients</h3>
+      <ul>
+          <li>1 clove of garlic</li>
+          <li>1 orange leaf</li>
+          <li>1 bay leaf</li>
+          <li>1 sprig of parsley</li>
+          <li>10g baker's yeast</li>
+          <li>125g rye flour</li>
+          <li>125g wheat flour</li>
+          <li>250g cornflour</li>
+          <li>70g liquid pig's blood</li>
+          <li>meat cooking water</li>
+          <li>pingue (fat from cooking the rojões)</li>
+          <li>salt, pepper and cumin as needed</li>
+      </ul>
+      <h3>Steps</h3>
+      <ol>
+          <li>Mix the flours and sieve.</li>
+          <li>Knead them with the baker's yeast, chilli, cumin, blood and enough meat cooking water to make a stiff dough.</li>
+          <li>Leave to rise in a warm place until it cracks.</li>
+          <li>Shape the dough into a cylindrical form with wet hands.</li>
+          <li>Cook the belouras in boiling water, seasoned with salt, parsley, garlic, orange leaves and bay leaves. As soon as they come to the surface, they are cooked.</li>
+          <li>Remove the belouras and place them on a baking tray, muffled between two cloths.</li>
+          <li>When it's time to serve, cut them into thin slices and fry in the dripping.</li>
+      </ol>
+    </main>
   </body>
-  </html>
+</html>
 
 
 
