--- a/recipes/carne_a_valenciana.html
+++ b/recipes/carne_a_valenciana.html
@@ -2,12 +2,14 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../styles/style.css">
     <title>Odin Recipes</title>
   </head>
   <body>
-    <h1><a href="../index.html">Odin Recipes</a></h1>
+    <main>
+      <h1><a href="../index.html"><img class="img-logo" src="https://cdn-images-1.medium.com/max/1200/1*60u1QENWMOJXaLQ1xzn0TQ.png" alt="odin project logo">Odin Recipes</a></h1>
     <h2>Carne de Porco à Alentejana</h2>
     <img class="img-recipe" src="https://i.pinimg.com/564x/83/a5/99/83a59995a7ea7d98ec7f6a97852b76c9.jpg" alt="A greyish-blue dish with diced pork, accompanied by diced fried potatoes and boiled clams, 
     with a light sauce at the bottom of the dish and a light sprinkling of parsley on top.">
@@ -51,6 +53,7 @@
         <li>Spoon the pork, clams and plenty of the sauce on top of the potato base layer! Sprinkle with fresh coriander.</li>
         <li>Serve and enjoy!</li>
     </ol>
+    </main>
   </body>
   </html>
 
