--- a/recipes/rojoes_a_moda_do_minho.html
+++ b/recipes/rojoes_a_moda_do_minho.html
@@ -2,65 +2,65 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../styles/style.css">
     <title>Odin Recipes</title>
   </head>
   <body>
-    <h1><a href="../index.html">Odin Recipes</a></h1>
-    <h2>Rojões à moda do Minho</h2>
-    <img class="img-recipe" src="https://i.pinimg.com/564x/bf/f7/95/bff7951ec944c4afcc8bc12d2f804bdf.jpg" alt="a white dish with braised pork mixed with potatoes and olives on top.">
-    <h2>Description</h2>
-    <p>Rojões à moda do Minho, a traditional Minho cuisine recipe much appreciated by lovers of Portuguese gastronomy.</p>
-    <p>Dare to try it.</p>
-
-    <h3>Ingredients</h3>
-    <ul>
-        <li>800g pork leg without skin but with fat</li>
-        <li>3.5dl green white wine</li>
-        <li>3 tablespoons lard</li>
-        <li>4 cloves garlic</li>
-        <li>2 bay leaves</li>
-        <li>1 dessert spoon sweet paprika or paprika</li>
-        <li>20 roasted chestnuts</li>
-        <li>350g <a href="./belouras.html">belouras</a></li>
-        <li>100g pork liver</li>
-        <li>100g boiled pig's blood</li>
-        <li>white pepper as needed</li>
-        <li>salt to taste as needed</li>
-    </ul>
-    <h4>Floured tripe</h4>
-    <ul>
-        <li>350g fresh pork casing</li>
-        <li>cornflour</li>
-        <li>cumin</li>
-        <li>2 lemon</li>
-    </ul>
-
-    <h3>Steps</h3>
-
-    <ol>
-        <li>Cut the pork into cubes about 10 cm square and marinate for 2 hours with the wine, crushed garlic cloves, salt, pepper and bay leaf.</li>
-        <li>Bring to the boil (preferably in an iron pan) and cook over a high heat until the wine has evaporated.</li>
-        <li>Over a low heat, add the lard and cook the rojões until they're golden brown.</li>
-        <li>Then add the paprika dissolved in a little green wine to the sauce.</li> 
-    </ol>
-    <h4>Floured tripe</h4>
-    <ol>
-        <li>Fresh tripe is washed very well and then soaked overnight in water with slices of lemon.</li>
-        <li>The water should be changed several times during this process.</li>
-        <li>They are then dried, turned inside out and rubbed with cornflour seasoned with pepper and cumin.</li>
-        <li>Tie one end and turn inside out. Dip them in boiling water to cook them quickly. Once cooked, they are ready to fry.</li>
-    </ol>
-    <h4>Preparation</h4>
-    <ol>
-        <li>Pour some of the fat from cooking the rojões into a pan and fry, little by little, the floured tripe cut into 3 cm to 5 cm pieces, the 
-            <a href="./belouras.html">belouras</a> cut into 0.5 cm thick slices and the liver and blood cut into slices.</li>
-        <li>As these ingredients finish frying, they are added to the rojões to keep everything warm.</li>
-        <li>The roasted chestnuts are also added, after being peeled.</li>
-    </ol>
-    <h5>Note:</h5>
-    <p>Rojões a moda do Minho are served on a platter with roast potatoes and garnished with slices of lemon and sprigs of parsley.</p>
+    <main>
+      <h1><a href="../index.html"><img class="img-logo" src="https://cdn-images-1.medium.com/max/1200/1*60u1QENWMOJXaLQ1xzn0TQ.png" alt="odin project logo">Odin Recipes</a></h1>
+      <h2>Rojões à moda do Minho</h2>
+      <img class="img-recipe" src="https://i.pinimg.com/564x/bf/f7/95/bff7951ec944c4afcc8bc12d2f804bdf.jpg" alt="a white dish with braised pork mixed with potatoes and olives on top.">
+      <h2>Description</h2>
+      <p>Rojões à moda do Minho, a traditional Minho cuisine recipe much appreciated by lovers of Portuguese gastronomy.</p>
+      <p>Dare to try it.</p>
+      <h3>Ingredients</h3>
+      <ul>
+          <li>800g pork leg without skin but with fat</li>
+          <li>3.5dl green white wine</li>
+          <li>3 tablespoons lard</li>
+          <li>4 cloves garlic</li>
+          <li>2 bay leaves</li>
+          <li>1 dessert spoon sweet paprika or paprika</li>
+          <li>20 roasted chestnuts</li>
+          <li>350g <a href="./belouras.html">belouras</a></li>
+          <li>100g pork liver</li>
+          <li>100g boiled pig's blood</li>
+          <li>white pepper as needed</li>
+          <li>salt to taste as needed</li>
+      </ul>
+      <h4>Floured tripe</h4>
+      <ul>
+          <li>350g fresh pork casing</li>
+          <li>cornflour</li>
+          <li>cumin</li>
+          <li>2 lemon</li>
+      </ul>
+      <h3>Steps</h3>  
+      <ol>
+          <li>Cut the pork into cubes about 10 cm square and marinate for 2 hours with the wine, crushed garlic cloves, salt, pepper and bay leaf.</li>
+          <li>Bring to the boil (preferably in an iron pan) and cook over a high heat until the wine has evaporated.</li>
+          <li>Over a low heat, add the lard and cook the rojões until they're golden brown.</li>
+          <li>Then add the paprika dissolved in a little green wine to the sauce.</li> 
+      </ol>
+      <h4>Floured tripe</h4>
+      <ol>
+          <li>Fresh tripe is washed very well and then soaked overnight in water with slices of lemon.</li>
+          <li>The water should be changed several times during this process.</li>
+          <li>They are then dried, turned inside out and rubbed with cornflour seasoned with pepper and cumin.</li>
+          <li>Tie one end and turn inside out. Dip them in boiling water to cook them quickly. Once cooked, they are ready to fry.</li>
+      </ol>
+      <h4>Preparation</h4>
+      <ol>
+          <li>Pour some of the fat from cooking the rojões into a pan and fry, little by little, the floured tripe cut into 3 cm to 5 cm pieces, the 
+              <a href="./belouras.html">belouras</a> cut into 0.5 cm thick slices and the liver and blood cut into slices.</li>
+          <li>As these ingredients finish frying, they are added to the rojões to keep everything warm.</li>
+          <li>The roasted chestnuts are also added, after being peeled.</li>
+      </ol>
+      <h5>Note:</h5>
+      <p>Rojões a moda do Minho are served on a platter with roast potatoes and garnished with slices of lemon and sprigs of parsley.</p>
+    </main>
   </body>
 </html>
 
