--- a/recipes/pasta_carbornara.html
+++ b/recipes/pasta_carbornara.html
@@ -2,51 +2,55 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../styles/style.css">
     <title>Odin Recipes</title>
   </head>
   <body>
-    <h1><a href="../index.html">Odin Recipes</a></h1>
-    <h2>Pasta Carbonara</h2>
-    <img  class="img-recipe" src="https://i.pinimg.com/564x/c1/14/69/c114695e0ed643baec4ac211f9bce6a4.jpg" alt="white dish with carbonara pasta with shavings of cheese on top, within of the pasta have a fork ready to be served.">
-    <h3>Description</h3>
-    <p>Spaghetti alla carbonara. Luscious and wonderfully indulgent, pasta carbonara takes as long to make as it does to cook the pasta.</p>
-    <p>The ingredients are simple—just spaghetti (or another long pasta), and the carbonara is made with pancetta or bacon, eggs, Parmesan,
-        a little olive oil, salt and pepper.</p> 
-    <p>The silky carbonara sauce is created when the beaten eggs are tossed with the hot pasta and a little fat from the pancetta or bacon.</p>
+    <main>
+        <h1><a href="../index.html"><img class="img-logo" src="https://cdn-images-1.medium.com/max/1200/1*60u1QENWMOJXaLQ1xzn0TQ.png" alt="odin project logo">Odin Recipes</a></h1>
+        <h2>Pasta Carbonara</h2>
+        <img  class="img-recipe" src="https://i.pinimg.com/564x/c1/14/69/c114695e0ed643baec4ac211f9bce6a4.jpg" alt="white dish with carbonara pasta with shavings of cheese on top, within of the pasta have a fork ready to be served.">
+        <h3>Description</h3>
+        <p>Spaghetti alla carbonara. Luscious and wonderfully indulgent, pasta carbonara takes as long to make as it does to cook the pasta.</p>
+        <p>The ingredients are simple—just spaghetti (or another long pasta), and the carbonara is made with pancetta or bacon, eggs, Parmesan,
+            a little olive oil, salt and pepper.</p> 
+        <p>The silky carbonara sauce is created when the beaten eggs are tossed with the hot pasta and a little fat from the pancetta or bacon.</p>
+    
+        <h4>Note:</h4>
+        <p>This recipe uses raw eggs, which are essentially cooked by tossing with hot pasta, just enough to thicken into a sauce.</p>
+        <p> The garlic is optional. It is not usually included in pasta carbonara, but it tastes great so we've included it. By the way, "guanciale", or pork jowl, is traditionally used in this dish, so if you can get it, by all means use it.</p>
+        <h3>Ingredients</h3>
+        <ul>
+            <li>1 tablespoon extra virgin olive oil or unsalted butter</li>
+            <li>1/2 pound pancetta or thick cut bacon, diced</li>
+            <li>1 to 2 garlic cloves, minced, about 1 teaspoon (optional)</li>
+            <li>3 to 4 whole eggs</li>
+            <li>1 cup grated Parmesan or pecorino cheese</li>
+            <li>1 pound spaghetti (or bucatini or fettuccine)</li>
+            <li>Kosher salt and freshly ground black pepper to taste</li>
+        </ul>
+        <h3>Steps</h3>
+        <ol>
+            <li>Heat the pasta water: Put a large pot of salted water on to boil (1 tablespoon salt for every 2 quarts of water.) Sauté the pancetta or bacon and garlic:</li>
+            <li>While the water is coming to a boil, heat the olive oil or butter in a large sauté pan over medium heat. Add the bacon or pancetta and cook slowly until crispy. 
+                Add the garlic (if using) and cook another minute, then turn off the heat and put the pancetta and garlic into a large bowl. </li>
+            <li>Beat the eggs and half of the cheese:
+                In a small bowl, beat the eggs and mix in about half of the cheese.</li>
+            <li>Cook the pasta:
+                Once the water has reached a rolling boil, add the dry pasta, and cook, uncovered, at a rolling boil.
+                </li>
+            <li>Toss the pasta with pancetta or bacon:
+                When the pasta is al dente (still a little firm, not mushy), use tongs to move it to the bowl with the bacon and garlic. Let it be dripping wet. Reserve some of the pasta water.
+                Move the pasta from the pot to the bowl quickly, as you want the pasta to be hot. It's the heat of the pasta that will heat the eggs sufficiently to create a creamy sauce.
+                Toss everything to combine, allowing the pasta to cool just enough so that it doesn't make the eggs curdle when you mix them in. (That's the tricky part.) </li>
+            <li>Cook the pasta.
+                Once the water has reached a rolling boil, add the dry pasta, and cook, uncovered, at a rolling boil.</li>
+            <li>Serve at once with the rest of the parmesan and freshly ground black pepper. If you want, sprinkle with a little fresh chopped parsley.</li>
+        </ol>
 
-    <h4>Note:</h4>
-    <p>This recipe uses raw eggs, which are essentially cooked by tossing with hot pasta, just enough to thicken into a sauce.</p>
-    <p> The garlic is optional. It is not usually included in pasta carbonara, but it tastes great so we've included it. By the way, "guanciale", or pork jowl, is traditionally used in this dish, so if you can get it, by all means use it.</p>
-    <h3>Ingredients</h3>
-    <ul>
-        <li>1 tablespoon extra virgin olive oil or unsalted butter</li>
-        <li>1/2 pound pancetta or thick cut bacon, diced</li>
-        <li>1 to 2 garlic cloves, minced, about 1 teaspoon (optional)</li>
-        <li>3 to 4 whole eggs</li>
-        <li>1 cup grated Parmesan or pecorino cheese</li>
-        <li>1 pound spaghetti (or bucatini or fettuccine)</li>
-        <li>Kosher salt and freshly ground black pepper to taste</li>
-    </ul>
-    <h3>Steps</h3>
-    <ol>
-        <li>Heat the pasta water: Put a large pot of salted water on to boil (1 tablespoon salt for every 2 quarts of water.) Sauté the pancetta or bacon and garlic:</li>
-        <li>While the water is coming to a boil, heat the olive oil or butter in a large sauté pan over medium heat. Add the bacon or pancetta and cook slowly until crispy. 
-            Add the garlic (if using) and cook another minute, then turn off the heat and put the pancetta and garlic into a large bowl. </li>
-        <li>Beat the eggs and half of the cheese:
-            In a small bowl, beat the eggs and mix in about half of the cheese.</li>
-        <li>Cook the pasta:
-            Once the water has reached a rolling boil, add the dry pasta, and cook, uncovered, at a rolling boil.
-            </li>
-        <li>Toss the pasta with pancetta or bacon:
-            When the pasta is al dente (still a little firm, not mushy), use tongs to move it to the bowl with the bacon and garlic. Let it be dripping wet. Reserve some of the pasta water.
-            Move the pasta from the pot to the bowl quickly, as you want the pasta to be hot. It's the heat of the pasta that will heat the eggs sufficiently to create a creamy sauce.
-            Toss everything to combine, allowing the pasta to cool just enough so that it doesn't make the eggs curdle when you mix them in. (That's the tricky part.) </li>
-        <li>Cook the pasta.
-            Once the water has reached a rolling boil, add the dry pasta, and cook, uncovered, at a rolling boil.</li>
-        <li>Serve at once with the rest of the parmesan and freshly ground black pepper. If you want, sprinkle with a little fresh chopped parsley.</li>
-    </ol>
+    </main>
   </body>
 </html>
 
